added contact section

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <main>
       <section class="firstSection">
         <div class="leftSection">
-          Hello, My Name Is
+          Hey, I'm
           <span class="purple">
             <br />
             Anirudh Pandey</span
           >
-          <div>And I'm A Passionate</div>
+          <div>A Passionate</div>
           <span id="element"></span>
           <br />
           <span id="element2"></span>
@@ -148,7 +148,7 @@
               <img src="assets/pricePredictor.jpg" alt="" class="image">
               <div class="layer">
                 <h3>House Price Predicor</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta, exercitationem alias hic cum eum fugit dolorum provident architecto quis accusamus.</p>
+                <p>A House Price Predictor helps to predcit prices of the houses based on some criteria. Crafted using python and ML</p>
                 <a href="#"><i class="fa-solid fa-link"></i></a>
               </div>
             </div>
@@ -156,7 +156,7 @@
               <img src="assets/netflix.png" alt="" class="image">
               <div class="layer">
                 <h3>Netflix Clone</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta, exercitationem alias hic cum eum fugit dolorum provident architecto quis accusamus.</p>
+                <p>Netflix Clone is a dynamic streaming platform crafted using HTML, CSS, and JavaScript. It's responsive design ensures an optimal viewing experience across devices. Beautifully designed with the power of front-end web technologies</p>
                 <a href="#"><i class="fa-solid fa-link"></i></a>
               </div>
             </div>
@@ -164,9 +164,36 @@
               <img src="assets/portfolio.png" alt="" class="image">
               <div class="layer">
                 <h3>Portfolio Website</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta, exercitationem alias hic cum eum fugit dolorum provident architecto quis accusamus.</p>
+                <p>An interactive and responsive portfolio website showcasing my work experience, eduction, skills crafted using HTML, CSS, JavaScript.</p>
                 <a href="#"><i class="fa-solid fa-link"></i></a>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- -----------contact-------------- -->
+      <div id="contact">
+        <div class="container">
+          <div class="row">
+            <div class="contact-left">
+              <h1 class="sub-title">Contact Me</h1>
+              <p> <i class="fa-regular fa-envelope"></i> anirudhpandey244@gmail.com</p>
+              <p> <i class="fa-solid fa-phone"></i> 6397766219</p>
+              <div class="social-icons">
+                <a href="https://www.instagram.com/anirudhpandey__/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/anirudh-pandey-78938a1b6/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/anirudh716"><i class="fa-brands fa-github"></i></a>
+              </div>
+              <a href="assets/" class="btn">Download Resume</a>
+            </div>
+            <div class="contact-right">
+              <form>
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your E-mail" required>
+                <textarea name="message" rows="6" placeholder="Your Message"></textarea>
+                <button type="submit">Submit</button>
+              </form>
             </div>
           </div>
         </div>
