done some changes

--- a/index.html
+++ b/index.html
@@ -185,18 +185,23 @@
                 <a href="https://www.linkedin.com/in/anirudh-pandey-78938a1b6/"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/anirudh716"><i class="fa-brands fa-github"></i></a>
               </div>
-              <a href="assets/" class="btn">Download Resume</a>
+              <a href="assets/ResumeAP.pdf" download class="btn">Download Resume</a>
             </div>
             <div class="contact-right">
               <form>
                 <input type="text" name="name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your E-mail" required>
                 <textarea name="message" rows="6" placeholder="Your Message"></textarea>
-                <button type="submit">Submit</button>
+                <button type="submit" class="btn">Submit</button>
               </form>
             </div>
           </div>
         </div>
+      </div>
+
+      <!-- -------------last section----------- -->
+      <div class="copyright">
+        <p>Copyright © Anirudh Pandey. Made with by <i class="fa-solid fa-heart"></i> Anirudh Pandey</p>
       </div>
     </main>
 
