fixed menu button

--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
       <!-- -------------last section----------- -->
       <div class="copyright">
         <p>
-          Copyright © Anirudh Pandey. Made with by
-          <i class="fa-solid fa-heart"></i> Anirudh Pandey
+          Copyright © Anirudh Pandey. Made with <i class="fa-solid fa-heart"></i> by
+          Anirudh Pandey.
         </p>
       </div>
     </main>
