added angle down arrow

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             <span id="element2"></span>
           </h1>
         </div>
+        <div class="angle-down-icon">
+          <i class="fa-solid fa-angle-down"></i>
+        </div>
       </div>
     </div>
     <main>
