fixed angle-down icon

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <span id="element2"></span>
           </h1>
         </div>
-        <div class="angle-down-icon">
+        <span class="angle-down-icon">
           <i class="fa-solid fa-angle-down"></i>
-        </div>
+        </span>
       </div>
     </div>
     <main>
