--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="icon" href="assets/favicon-32x32.png" type="image/x-icon">
   </head>
   <body>
+    <section class="front-page">
     <div id="header">
       <div class="container">
         <nav id="navbar">
@@ -47,8 +48,8 @@
         </span>
       </div>
     </div>
+  </section>
     <main>
-      <hr />
       <!-- -----------about section------------- -->
       <div id="about">
         <div class="container">
