Updated Projects Section

--- a/index.html
+++ b/index.html
@@ -92,10 +92,13 @@
                     <span>Core</span><br />Data Structures, Algorithms,DBMS
                   </li>
                   <li>
-                    <span>Languages</span><br />C/C++, Python, JavaScript,
-                    HTML/CSS
+                    <span>Languages</span><br />C/C++, JavaScript,
+                    HTML/CSS, Python
                   </li>
-                  <li><span>Tools</span><br />VS Code, PyCharm</li>
+                  <li>
+                    <span>FrameWorks</span><br /> Bootstrap, JQuery
+                  </li>
+                  <li><span>Tools</span><br />VS Code, PyCharm, Jupyter Notebook</li>
                 </ul>
               </div>
               <div class="tab-contents" id="education">
@@ -127,14 +130,9 @@
             <div>
               <img src="assets/leetcode.png" alt="" />
               <h2>Leetcode</h2>
-              <p>(200+ Problems Solved)</p>
+              <p>(350+ Problems Solved)</p>
               <a href="https://www.leetcode.com/anirudh196">Visit</a>
             </div>
-            <!-- <div>
-                <h2>Geeks For Geeks</h2>
-                <p>(100+ Problems Solved)</p>
-                <a href="https://auth.geeksforgeeks.org/user/anirudhcode244/">Visit</a>
-              </div> -->
             <div>
               <img src="assets/cnLogo.jpg" alt="" class="cnLogo" />
               <h2>Coding Ninja</h2>
@@ -154,37 +152,31 @@
           <h1 class="sub-title">Projects</h1>
           <div class="projects-list">
             <div class="project">
-              <img src="assets/pricePredictor.jpg" alt="" class="image" />
+              <img src="assets/codespace.png" alt="" class="image" />
               <div class="layer">
-                <h3>House Price Predicor</h3>
+                <h3>CodeSpace - Online Code Editor</h3>
                 <p>
-                  A House Price Predictor helps to predcit prices of the houses
-                  based on some criteria. Crafted using python and ML
+                  Developed a dynamic and user-friendly online code editor using HTML, CSS, and JavaScript. Helps users to write, edit, and run code seamlessly within a web browser.
                 </p>
                 <a href="#"><i class="fa-solid fa-link"></i></a>
               </div>
             </div>
             <div class="project">
-              <img src="assets/netflix.png" alt="" class="image" />
+              <img src="assets/Screenshot (25).png" alt="" class="image" />
               <div class="layer">
-                <h3>Netflix Clone</h3>
+                <h3>Sorting Visualizer</h3>
                 <p>
-                  Netflix Clone is a dynamic streaming platform crafted using
-                  HTML, CSS, and JavaScript. It's responsive design ensures an
-                  optimal viewing experience across devices. Beautifully
-                  designed with the power of front-end web technologies
+                  Developed a dynamic sorting visualizer using HTML, CSS, and JavaScript to illustrate the sorting process of various algorithms.Implemented multiple sorting algorithms such as Bubble Sort, Selection Sort, Insertion Sort, Merge Sort, and Quick Sort.
                 </p>
                 <a href="#"><i class="fa-solid fa-link"></i></a>
               </div>
             </div>
             <div class="project">
-              <img src="assets/portfolio.png" alt="" class="image" />
+              <img src="assets/Screenshot (26).png" alt="" class="image" />
               <div class="layer">
-                <h3>Portfolio Website</h3>
+                <h3>Weather App</h3>
                 <p>
-                  An interactive and responsive portfolio website showcasing my
-                  work experience, eduction, skills crafted using HTML, CSS,
-                  JavaScript.
+                  Developed a responsive and user-friendly weather application using HTML, CSS, and JavaScript. Implemented a clean and intuitive user interface for seamless user interaction.
                 </p>
                 <a href="#"><i class="fa-solid fa-link"></i></a>
               </div>
