Added Links For Projects

--- a/index.html
+++ b/index.html
@@ -158,27 +158,27 @@
                 <p>
                   Developed a dynamic and user-friendly online code editor using HTML, CSS, and JavaScript. Helps users to write, edit, and run code seamlessly within a web browser.
                 </p>
-                <a href="#"><i class="fa-solid fa-link"></i></a>
+                <a href="https://github.com/anirudh716/CodeSpace"><i class="fa-solid fa-link"></i></a>
               </div>
             </div>
             <div class="project">
-              <img src="assets/Screenshot (25).png" alt="" class="image" />
+              <img src="assets/sortvisual.png" alt="" class="image" />
               <div class="layer">
                 <h3>Sorting Visualizer</h3>
                 <p>
                   Developed a dynamic sorting visualizer using HTML, CSS, and JavaScript to illustrate the sorting process of various algorithms.Implemented multiple sorting algorithms such as Bubble Sort, Selection Sort, Insertion Sort, Merge Sort, and Quick Sort.
                 </p>
-                <a href="#"><i class="fa-solid fa-link"></i></a>
+                <a href="https://sortingvisualizerhub.netlify.app"><i class="fa-solid fa-link"></i></a>
               </div>
             </div>
             <div class="project">
-              <img src="assets/Screenshot (26).png" alt="" class="image" />
+              <img src="assets/weather.png" alt="" class="image" />
               <div class="layer">
                 <h3>Weather App</h3>
                 <p>
                   Developed a responsive and user-friendly weather application using HTML, CSS, and JavaScript. Implemented a clean and intuitive user interface for seamless user interaction.
                 </p>
-                <a href="#"><i class="fa-solid fa-link"></i></a>
+                <a href="https://seetodaysweather.netlify.app"><i class="fa-solid fa-link"></i></a>
               </div>
             </div>
           </div>
