--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                   ><i class="fa-brands fa-github"></i
                 ></a>
               </div>
-              <a href="assets/ResumeAP.pdf" download class="btn"
+              <a href="assets/Anirudh Pandey Resume.pdf" download class="btn"
                 >Download Resume</a
               >
             </div>
